<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/gym_guardian_logo"
        app:layout_constraintBottom_toTopOf="@id/guideline_center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />


    <TextView
        android:id="@+id/taglineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/g"
        android:text="@string/tagline"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:foreground="@null"
        android:stateListAnimator="@null"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/g"
        android:text="@string/start_button"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taglineTextView" />


    <TextView
        android:id="@+id/alreadyAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:fontFamily="@font/g"
        android:text="@string/already_have_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signInTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/g"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/alreadyAccountTextView"
        app:layout_constraintStart_toEndOf="@id/alreadyAccountTextView"
        app:layout_constraintTop_toTopOf="@id/alreadyAccountTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/changeLanguageButton"
        style="@style/CustomButton"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:text="@string/change_language"
        android:textStyle="bold"
        android:paddingStart="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alreadyAccountTextView" />

    <ImageView
        android:id="@+id/languageIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/language"
        app:layout_constraintStart_toStartOf="@id/changeLanguageButton"
        app:layout_constraintBottom_toBottomOf="@id/changeLanguageButton"
        app:layout_constraintTop_toTopOf="@id/changeLanguageButton"
        android:layout_marginStart="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
