<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/g"
        android:text="@string/select_language"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/englishButton"
        style="@style/CustomButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="108dp"
        android:paddingStart="51dp"
        android:text="@string/english"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectLanguageTitle" />

    <ImageView
        android:id="@+id/flagMexico"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/spanish"
        app:layout_constraintBottom_toBottomOf="@id/spanishButton"
        app:layout_constraintStart_toStartOf="@id/spanishButton"
        app:layout_constraintTop_toTopOf="@id/spanishButton" />

    <Button
        android:id="@+id/spanishButton"
        style="@style/CustomButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:paddingStart="51dp"
        android:text="@string/spanish"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/englishButton" />

    <ImageView
        android:id="@+id/flagUsa"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/english"
        app:layout_constraintBottom_toBottomOf="@id/englishButton"
        app:layout_constraintStart_toStartOf="@id/englishButton"
        app:layout_constraintTop_toTopOf="@id/englishButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
